# Omvex

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  configure_build.py  imgui.ini  run.sh
configs/: imgui.ini
example/backgrounds/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json
example/models/Deodorant/: deodorant.mtl
example/models/Hammer/: hammer.mtl
example/models/Light/: light.mtl
example/models/Meter5m/: meter5m.mtl
example/models/Power_distributor/: power_distributor.mtl
example/models/Rubiks_cube/: rubiks_cube.mtl
example/models/Sliding_scale/: sliding_scale.mtl
example/models/Uhu/: uhu.mtl
example/models/Wrench/: wrench.mtl
images/: bg1.json  bg2.json  bg3.json  bg4.json  bg5.json  bg6.json
include/: Application.h  Camera.h  CameraCalibrator.h  CameraManager.h  CameraParameters.h  CameraParametersManager.h  Colors.h  EBO.h  FBO.h  FileSystem.h  Logger.h  Mesh.h  MeshManager.h  Model.h  ModelManager.h  PhysicsManager.h  Quad.h  Random.h  RenderManager.h  Serialize.h  Shader.h  Texture.h  TextureManager.h  Utils.h  VAO.h  VBO.h  Viewport.h
include/Core/: Application.h  CameraCalibrator.h  Context.h  Generator.h  IAppMode.h  Logger.h  Viewport.h
include/Core/Camera/: Camera.h  CameraMath.h  CameraParameters.h
include/Core/Loader/: ExampleLoader.h  TutorialLoader.h
include/Managers/: CameraManager.h  CameraParametersManager.h  ModelManager.h  PhysicsManager.h  TextureManager.h
include/Rendering/Buffers/: EBO.h  FBO.h  VAO.h  VBO.h
include/Rendering/Models/: Mesh.h  Model.h  Quad.h
include/Rendering/Shaders/: Renderer.h  Shader.h
include/Rendering/Textures/: Texture.h
include/Utilities/: Colors.h  CvToGlm.h  FileSystem.h  GlmToCv.h  GlmToImGuiText.h  GlmToString.h  ImGuiHelpers.h  Random.h  ReactPhysicsHelpers.h  Serialize.h
models/Multimeter/: multimeter.blend  multimeter.blend1  multimeter.mtl
models/Power_distributor/: power_distributor.blend  power_distributor.blend1
models/Sliding_scale/: sliding_scale.blend  sliding_scale.blend1
resources/: tutorial.txt
shaders/: colorFrag.glsl  colorVert.glsl  flatFrag.glsl  flatVert.glsl  quadFrag.glsl  quadVert.glsl  rayTraceFrag.glsl  rayTraceVert.glsl  segmentedFrag.glsl  segmentedVert.glsl  shadedFrag.glsl  shadedVert.glsl
src/: Application.cpp  Camera.cpp  CameraCalibrator.cpp  CameraManager.cpp  CameraParameters.cpp  CameraParametersManager.cpp  FBO.cpp  FileSystem.cpp  Logger.cpp  Mesh.cpp  MeshManager.cpp  Model.cpp  ModelManager.cpp  PhysicsManager.cpp  Quad.cpp  RenderManager.cpp  Serialize.cpp  Shader.cpp  Texture.cpp  Utils.cpp  VAO.cpp  Viewport.cpp  main.cpp  pfd.cpp  reactphysics.cpp
src/Core/: Application.cpp  CameraCalibrator.cpp  Context.cpp  Generator.cpp  Logger.cpp  Viewport.cpp
src/Core/Camera/: Camera.cpp  CameraMath.cpp  CameraParameters.cpp
src/Core/Loaders/: ExampleLoader.cpp  TutorialLoader.cpp
src/Managers/: CameraManager.cpp  CameraParametersManager.cpp  ModelManager.cpp  PhysicsManager.cpp
src/Rendering/Buffers/: FBO.cpp
src/Rendering/Models/: Mesh.cpp  Model.cpp  Quad.cpp
src/Rendering/Shaders/: Renderer.cpp  Shader.cpp
src/Rendering/Textures/: Texture.cpp
src/Utilities/: CvToGlm.cpp  FileSystem.cpp  GlmToCv.cpp  GlmToString.cpp  ImGuiHelpers.cpp
test1/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json
